--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "docs"
   ],
   "peerDependencies": {
-    "@sudoplatform/sudo-api-client": "^1.0.0",
-    "@sudoplatform/sudo-common": "^1.0.5",
-    "@sudoplatform/sudo-user": "^1.0.11"
+    "@sudoplatform/sudo-api-client": "^2.0.0",
+    "@sudoplatform/sudo-common": "^2.0.1",
+    "@sudoplatform/sudo-user": "^2.0.0"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "^4.0.1",
-    "fp-ts": "^2.8.3",
-    "graphql": "^15.3.0",
-    "io-ts": "^2.2.11",
+    "fp-ts": "^2.9.0",
+    "graphql": "^15.4.0",
+    "io-ts": "^2.2.13",
     "monocle-ts": "^2.3.3",
     "newtype-ts": "^0.3.4",
     "redux": "^4.0.5"
@@ -45,45 +45,41 @@
   "resolutions": {
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "**/braces": "^2.3.1",
-    "**/minimist": "^1.2.3",
-    "**/node-fetch": "^2.6.1",
-    "**/yargs-parser": "^18.1.2",
-    "**/mem": "^4.0.0"
+    "**/node-fetch": "^2.6.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-private-methods": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/cli": "^7.12.7",
+    "@babel/core": "^7.12.7",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-private-methods": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
     "@graphql-codegen/add": "^2.0.1",
-    "@graphql-codegen/cli": "^1.17.10",
-    "@graphql-codegen/typed-document-node": "^1.17.9",
-    "@graphql-codegen/typescript": "^1.17.10",
-    "@graphql-codegen/typescript-operations": "^1.17.8",
+    "@graphql-codegen/cli": "^1.19.2",
+    "@graphql-codegen/typed-document-node": "^1.17.10",
+    "@graphql-codegen/typescript": "^1.17.11",
+    "@graphql-codegen/typescript-operations": "^1.17.10",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@react-native-community/async-storage": "^1.11.0",
-    "@react-native-community/netinfo": "^5.0.0",
-    "@sudoplatform/sudo-api-client": "^1.0.0",
-    "@sudoplatform/sudo-common": "^1.0.5",
-    "@sudoplatform/sudo-user": "^1.0.11",
-    "@types/jest": "^26.0.14",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
+    "@react-native-community/netinfo": "^5.9.9",
+    "@sudoplatform/sudo-api-client": "^2.0.0",
+    "@sudoplatform/sudo-common": "^2.0.1",
+    "@sudoplatform/sudo-user": "^2.0.0",
+    "@types/jest": "^26.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
     "apollo-client": "^2.6.10",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.5.2",
-    "prettier": "^2.1.2",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.0",
     "react": "16.13.1",
     "react-native": "^0.63.3",
-    "ts-jest": "^26.4.1",
+    "ts-jest": "^26.4.4",
     "ts-mockito": "^2.6.1",
     "typedoc": "0.17.0-3",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.2"
   }
 }
