--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:eslint": "eslint \"{bin,test,src}/**/*.{ts,tsx}\"",
     "lint:prettier": "prettier -l \"{bin,test,src}/**/*.{js,json,jsx,ts,tsx}\"",
     "codegen": "graphql-codegen -c codegen.yml",
-    "verify": "yarn audit && yarn lint",
+    "verify": "yarn audit && yarn lint && yarn unit-test",
     "unit-test": "jest --coverage src",
     "integration-test": "jest --passWithNoTests test/integration",
     "clean": "rm -rf lib docs",
@@ -28,14 +28,14 @@
     "docs"
   ],
   "peerDependencies": {
-    "@sudoplatform/sudo-api-client": "^2.0.0",
-    "@sudoplatform/sudo-common": "^2.0.1",
-    "@sudoplatform/sudo-user": "^2.0.0"
+    "@sudoplatform/sudo-api-client": "^3.0.0",
+    "@sudoplatform/sudo-common": "^3.2.0",
+    "@sudoplatform/sudo-user": "^3.0.2"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "^4.0.1",
-    "fp-ts": "^2.9.0",
+    "fp-ts": "^2.9.1",
     "graphql": "^15.4.0",
     "io-ts": "^2.2.13",
     "monocle-ts": "^2.3.3",
@@ -48,38 +48,40 @@
     "**/node-fetch": "^2.6.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.7",
-    "@babel/core": "^7.12.7",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-private-methods": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "@graphql-codegen/add": "^2.0.1",
-    "@graphql-codegen/cli": "^1.19.2",
-    "@graphql-codegen/typed-document-node": "^1.17.10",
-    "@graphql-codegen/typescript": "^1.17.11",
-    "@graphql-codegen/typescript-operations": "^1.17.10",
+    "@graphql-codegen/add": "^2.0.2",
+    "@graphql-codegen/cli": "^1.19.4",
+    "@graphql-codegen/typed-document-node": "^1.18.1",
+    "@graphql-codegen/typescript": "^1.19.0",
+    "@graphql-codegen/typescript-operations": "^1.17.12",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/netinfo": "^5.9.9",
-    "@sudoplatform/sudo-api-client": "^2.0.0",
-    "@sudoplatform/sudo-common": "^2.0.1",
-    "@sudoplatform/sudo-user": "^2.0.0",
-    "@types/jest": "^26.0.15",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
+    "@sudoplatform/sudo-api-client": "^3.0.0",
+    "@sudoplatform/sudo-common": "^3.2.0",
+    "@sudoplatform/sudo-user": "^3.0.2",
+    "@types/jest": "^26.0.19",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.3.0",
     "jest": "^26.6.3",
-    "prettier": "^2.2.0",
+    "prettier": "^2.2.1",
     "react": "16.13.1",
-    "react-native": "^0.63.3",
+    "react-native": "^0.63.4",
     "ts-jest": "^26.4.4",
     "ts-mockito": "^2.6.1",
     "typedoc": "0.17.0-3",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3",
+    "uuid": "^8.3.2"
   }
 }
