--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
     "jest": "^26.6.3",
+    "lodash": "^4.17.20",
     "prettier": "^2.2.1",
     "react": "16.13.1",
     "react-native": "^0.63.4",
@@ -82,6 +83,7 @@
     "ts-mockito": "^2.6.1",
     "typedoc": "0.17.0-3",
     "typescript": "^4.1.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "wait-for-expect": "^3.0.2"
   }
 }
