--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:prettier": "prettier -l \"{bin,test,src}/**/*.{js,json,jsx,ts,tsx}\"",
     "codegen": "graphql-codegen -c codegen.yml",
     "verify": "yarn audit && yarn lint && yarn unit-test",
-    "unit-test": "jest --coverage src",
+    "unit-test": "jest --coverage test/unit",
     "integration-test": "jest --passWithNoTests test/integration",
     "clean": "rm -rf lib docs",
     "build": "yarn codegen && yarn verify && yarn build:transpile && yarn build:declarations && yarn build:docs",
@@ -35,10 +35,10 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "^4.0.1",
-    "fp-ts": "^2.9.1",
+    "fp-ts": "^2.9.3",
     "graphql": "^15.4.0",
     "io-ts": "^2.2.13",
-    "monocle-ts": "^2.3.3",
+    "monocle-ts": "^2.3.4",
     "newtype-ts": "^0.3.4",
     "redux": "^4.0.5"
   },
@@ -55,25 +55,25 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "^1.19.4",
-    "@graphql-codegen/typed-document-node": "^1.18.1",
-    "@graphql-codegen/typescript": "^1.19.0",
-    "@graphql-codegen/typescript-operations": "^1.17.12",
+    "@graphql-codegen/cli": "^1.20.0",
+    "@graphql-codegen/typed-document-node": "^1.18.2",
+    "@graphql-codegen/typescript": "^1.20.0",
+    "@graphql-codegen/typescript-operations": "^1.17.13",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@react-native-community/async-storage": "^1.11.0",
-    "@react-native-community/netinfo": "^5.9.9",
+    "@react-native-community/netinfo": "^5.9.10",
     "@sudoplatform/sudo-api-client": "^3.0.0",
     "@sudoplatform/sudo-common": "^3.2.0",
-    "@sudoplatform/sudo-user": "^3.0.2",
+    "@sudoplatform/sudo-user": "^3.1.0",
     "@types/jest": "^26.0.19",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "lodash": "^4.17.20",
     "prettier": "^2.2.1",
