--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "docs"
   ],
   "peerDependencies": {
-    "@sudoplatform/sudo-api-client": "^5.0.0",
-    "@sudoplatform/sudo-common": "^3.3.0",
-    "@sudoplatform/sudo-user": "^5.0.1"
+    "@sudoplatform/sudo-api-client": "^6.0.0",
+    "@sudoplatform/sudo-common": "^3.4.0",
+    "@sudoplatform/sudo-user": "^6.0.0"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
@@ -38,14 +38,15 @@
     "fp-ts": "^2.9.5",
     "graphql": "^15.5.0",
     "io-ts": "^2.2.16",
-    "monocle-ts": "^2.3.8",
+    "monocle-ts": "^2.3.9",
     "newtype-ts": "^0.3.4",
     "redux": "^4.0.5"
   },
   "resolutions": {
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "**/node-fetch": "^2.6.1"
+    "**/node-fetch": "^2.6.1",
+    "**/xmldom": "^0.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
@@ -55,25 +56,26 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
     "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "^1.21.2",
-    "@graphql-codegen/typed-document-node": "^1.18.3",
+    "@graphql-codegen/cli": "^1.21.3",
+    "@graphql-codegen/typed-document-node": "^1.18.4",
     "@graphql-codegen/typescript": "^1.21.1",
     "@graphql-codegen/typescript-operations": "^1.17.15",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/netinfo": "^5.9.10",
-    "@sudoplatform/sudo-api-client": "^5.0.0",
-    "@sudoplatform/sudo-common": "^3.3.0",
-    "@sudoplatform/sudo-user": "^5.0.1",
+    "@sudoplatform/sudo-api-client": "^6.0.0",
+    "@sudoplatform/sudo-common": "^3.4.0",
+    "@sudoplatform/sudo-user": "^6.0.0",
     "@types/jest": "^26.0.20",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^7.21.0",
+    "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "isomorphic-webcrypto": "^2.3.8",
     "jest": "^26.6.3",
     "lodash": "^4.17.21",
     "prettier": "^2.2.1",
