--- a/package.json
+++ b/package.json
@@ -46,14 +46,15 @@
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
     "**/node-fetch": "^2.6.1",
-    "**/xmldom": "^0.5.0"
+    "**/xmldom": "^0.5.0",
+    "**/y18n": "^5.0.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.10",
-    "@babel/core": "^7.13.10",
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-private-methods": "^7.13.0",
-    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
     "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "^1.21.3",
@@ -65,13 +66,13 @@
     "@react-native-community/netinfo": "^5.9.10",
     "@sudoplatform/sudo-api-client": "^6.0.0",
     "@sudoplatform/sudo-common": "^3.4.0",
-    "@sudoplatform/sudo-user": "^6.0.0",
-    "@types/jest": "^26.0.20",
+    "@sudoplatform/sudo-user": "^6.0.2",
+    "@types/jest": "^26.0.22",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^7.22.0",
+    "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
@@ -81,7 +82,7 @@
     "prettier": "^2.2.1",
     "react": "16.13.1",
     "react-native": "^0.63.4",
-    "ts-jest": "^26.5.3",
+    "ts-jest": "^26.5.4",
     "ts-mockito": "^2.6.1",
     "typedoc": "0.17.0-3",
     "typescript": "^4.2.3",
