--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "docs"
   ],
   "peerDependencies": {
-    "@sudoplatform/sudo-api-client": "^7.0.0",
-    "@sudoplatform/sudo-common": "^4.1.0",
-    "@sudoplatform/sudo-user": "^7.0.1"
+    "@sudoplatform/sudo-api-client": "^8.0.0",
+    "@sudoplatform/sudo-common": "^5.0.1",
+    "@sudoplatform/sudo-user": "^8.0.0"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "^4.0.3",
-    "fp-ts": "^2.10.4",
+    "fp-ts": "^2.10.5",
     "graphql": "^15.5.0",
     "io-ts": "^2.2.16",
     "monocle-ts": "^2.3.9",
@@ -47,14 +47,19 @@
     "**/apollo-cache-inmemory": "^1.6.6",
     "**/node-fetch": "^2.6.1",
     "**/xmldom": "^0.5.0",
-    "**/y18n": "^5.0.8"
+    "**/y18n": "^5.0.8",
+    "**/ua-parser-js": "^0.7.24",
+    "**/hosted-git-info": "^2.8.9",
+    "**/underscore": "^1.12.1",
+    "**/lodash": "^4.17.21",
+    "**/handlebars": "^4.7.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.13.16",
+    "@babel/core": "^7.14.0",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-private-methods": "^7.13.0",
-    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-env": "^7.14.1",
     "@babel/preset-typescript": "^7.13.0",
     "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "^1.21.4",
@@ -64,25 +69,25 @@
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/netinfo": "^5.9.10",
-    "@sudoplatform/sudo-api-client": "^7.0.0",
-    "@sudoplatform/sudo-common": "^4.1.0",
-    "@sudoplatform/sudo-user": "^7.0.1",
-    "@types/jest": "^26.0.22",
+    "@sudoplatform/sudo-api-client": "^8.0.0",
+    "@sudoplatform/sudo-common": "^5.0.1",
+    "@sudoplatform/sudo-user": "^8.0.0",
+    "@types/jest": "^26.0.23",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "apollo-client": "^2.6.10",
-    "eslint": "^7.25.0",
+    "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.4.0",
     "isomorphic-webcrypto": "^2.3.8",
     "jest": "^26.6.3",
     "lodash": "^4.17.21",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.0",
     "react": "16.13.1",
     "react-native": "^0.63.4",
-    "ts-jest": "^26.5.5",
+    "ts-jest": "^26.5.6",
     "ts-mockito": "^2.6.1",
     "typedoc": "0.17.0-3",
     "typescript": "^4.2.4",
