--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "fp-ts": "^2.10.5",
     "graphql": "^15.5.0",
     "io-ts": "^2.2.16",
-    "monocle-ts": "^2.3.9",
+    "monocle-ts": "^2.3.10",
     "newtype-ts": "^0.3.4",
-    "redux": "^4.0.5"
+    "redux": "^4.1.0"
   },
   "resolutions": {
     "**/apollo-link": "^1.2.14",
@@ -52,14 +52,15 @@
     "**/hosted-git-info": "^2.8.9",
     "**/underscore": "^1.12.1",
     "**/lodash": "^4.17.21",
-    "**/handlebars": "^4.7.7"
+    "**/handlebars": "^4.7.7",
+    "**/browserslist": "4.16.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.0",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-private-methods": "^7.13.0",
-    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-env": "^7.14.2",
     "@babel/preset-typescript": "^7.13.0",
     "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "^1.21.4",
@@ -69,25 +70,25 @@
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/netinfo": "^5.9.10",
-    "@sudoplatform/sudo-api-client": "^8.0.0",
+    "@sudoplatform/sudo-api-client": "^8.0.1",
     "@sudoplatform/sudo-common": "^5.0.1",
     "@sudoplatform/sudo-user": "^8.0.0",
     "@types/jest": "^26.0.23",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^7.26.0",
+    "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-prettier": "^3.4.0",
     "isomorphic-webcrypto": "^2.3.8",
-    "jest": "^26.6.3",
+    "jest": "^27.0.1",
     "lodash": "^4.17.21",
     "prettier": "^2.3.0",
     "react": "16.13.1",
     "react-native": "^0.63.4",
-    "ts-jest": "^26.5.6",
+    "ts-jest": "^27.0.0",
     "ts-mockito": "^2.6.1",
     "typedoc": "0.17.0-3",
     "typescript": "^4.2.4",
