--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "yarn codegen && yarn verify && yarn build:transpile && yarn build:declarations && yarn build:docs",
     "build:transpile": "babel src --out-dir lib --extensions '.ts'",
     "build:declarations": "tsc --emitDeclarationOnly",
-    "build:docs": "typedoc --mode library --excludePrivate --out docs src/index.ts"
+    "build:docs": "typedoc --mode file --excludePrivate --out docs src/index.ts"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -36,7 +36,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "^4.0.3",
     "fp-ts": "^2.10.5",
-    "graphql": "^15.5.0",
+    "graphql": "^15.5.1",
     "io-ts": "^2.2.16",
     "monocle-ts": "^2.3.10",
     "newtype-ts": "^0.3.4",
@@ -45,53 +45,51 @@
   "resolutions": {
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "**/node-fetch": "^2.6.1",
-    "**/xmldom": "^0.5.0",
-    "**/y18n": "^5.0.8",
-    "**/ua-parser-js": "^0.7.24",
-    "**/hosted-git-info": "^2.8.9",
-    "**/underscore": "^1.12.1",
-    "**/lodash": "^4.17.21",
-    "**/handlebars": "^4.7.7",
-    "**/browserslist": "4.16.5"
+    "@graphql-codegen/**/url-loader/ws": "^7.5.0",
+    "@graphql-codegen/**/normalize-url": "^4.5.1",
+    "**/glob-parent": "^5.1.2",
+    "**/react-devtools-core/ws": "^7.5.0",
+    "**/xmldom": "^0.6.0",
+    "typedoc/marked": "^2.0.3",
+    "**/node-fetch": "^2.6.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-private-methods": "^7.13.0",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-typescript": "^7.13.0",
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-private-methods": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.14.5",
     "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "^1.21.4",
-    "@graphql-codegen/typed-document-node": "^1.18.5",
-    "@graphql-codegen/typescript": "^1.22.0",
-    "@graphql-codegen/typescript-operations": "^1.17.16",
+    "@graphql-codegen/cli": "^1.21.5",
+    "@graphql-codegen/typed-document-node": "^1.18.8",
+    "@graphql-codegen/typescript": "^1.22.3",
+    "@graphql-codegen/typescript-operations": "^1.18.2",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/netinfo": "^5.9.10",
-    "@sudoplatform/sudo-api-client": "^8.0.1",
-    "@sudoplatform/sudo-common": "^5.0.1",
-    "@sudoplatform/sudo-user": "^8.0.0",
+    "@sudoplatform/sudo-api-client": "^8.0.2",
+    "@sudoplatform/sudo-common": "^5.0.2",
+    "@sudoplatform/sudo-user": "^8.0.3",
     "@types/jest": "^26.0.23",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^7.27.0",
+    "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
     "isomorphic-webcrypto": "^2.3.8",
-    "jest": "^27.0.1",
+    "jest": "^27.0.5",
     "lodash": "^4.17.21",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.1",
     "react": "16.13.1",
     "react-native": "^0.63.4",
-    "ts-jest": "^27.0.0",
+    "ts-jest": "^27.0.3",
     "ts-mockito": "^2.6.1",
-    "typedoc": "0.17.0-3",
-    "typescript": "^4.2.4",
+    "typedoc": "0.19.2",
+    "typescript": "^4.3.4",
     "uuid": "^8.3.2",
     "wait-for-expect": "^3.0.2"
   }
