--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "codegen": "graphql-codegen -c codegen.yml",
     "verify": "yarn audit && yarn lint && yarn unit-test",
     "unit-test": "jest --coverage test/unit",
-    "integration-test": "jest --passWithNoTests test/integration",
+    "integration-test": "jest test/integration",
     "clean": "rm -rf lib docs",
     "build": "yarn codegen && yarn verify && yarn build:transpile && yarn build:declarations && yarn build:docs",
     "build:transpile": "babel src --out-dir lib --extensions '.ts'",
@@ -28,9 +28,9 @@
     "docs"
   ],
   "peerDependencies": {
-    "@sudoplatform/sudo-api-client": "^8.0.4",
-    "@sudoplatform/sudo-common": "^5.2.0",
-    "@sudoplatform/sudo-user": "^8.0.0"
+    "@sudoplatform/sudo-api-client": "^9.0.0",
+    "@sudoplatform/sudo-common": "^5.2.1",
+    "@sudoplatform/sudo-user": "^9.0.0"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
@@ -45,38 +45,38 @@
   "resolutions": {
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "@graphql-codegen/**/url-loader/ws": "^7.5.2",
+    "@graphql-codegen/**/url-loader/ws": "^7.5.3",
     "@graphql-codegen/**/normalize-url": "^4.5.1",
     "**/glob-parent": "^5.1.2",
-    "**/react-devtools-core/ws": "^7.5.2",
+    "**/react-devtools-core/ws": "^7.5.3",
     "**/xmldom": "^0.6.0",
     "typedoc/marked": "^2.1.3",
     "**/node-fetch": "^2.6.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.14.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-private-methods": "^7.14.5",
-    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-env": "^7.14.8",
     "@babel/preset-typescript": "^7.14.5",
     "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "^1.21.6",
-    "@graphql-codegen/typed-document-node": "^1.18.9",
-    "@graphql-codegen/typescript": "^1.22.4",
-    "@graphql-codegen/typescript-operations": "^1.18.3",
+    "@graphql-codegen/cli": "^1.21.7",
+    "@graphql-codegen/typed-document-node": "^1.18.10",
+    "@graphql-codegen/typescript": "^1.23.0",
+    "@graphql-codegen/typescript-operations": "^1.18.4",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/netinfo": "^5.9.10",
-    "@sudoplatform/sudo-api-client": "^8.0.4",
-    "@sudoplatform/sudo-common": "^5.2.0",
-    "@sudoplatform/sudo-user": "^8.0.3",
-    "@types/jest": "^26.0.23",
-    "@types/lodash": "^4.14.170",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
+    "@sudoplatform/sudo-api-client": "^9.0.0",
+    "@sudoplatform/sudo-common": "^5.2.1",
+    "@sudoplatform/sudo-user": "^9.0.0",
+    "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.171",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "apollo-client": "^2.6.10",
-    "eslint": "^7.30.0",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
