--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "4.0.3",
-    "fp-ts": "^2.11.0",
+    "fp-ts": "^2.11.1",
     "graphql": "^15.5.1",
     "io-ts": "^2.2.16",
     "monocle-ts": "^2.3.10",
     "newtype-ts": "^0.3.4",
-    "redux": "^4.1.0"
+    "redux": "^4.1.1"
   },
   "resolutions": {
     "**/apollo-link": "^1.2.14",
@@ -49,22 +49,22 @@
     "@graphql-codegen/**/normalize-url": "^4.5.1",
     "**/glob-parent": "^5.1.2",
     "**/react-devtools-core/ws": "^7.5.3",
-    "**/xmldom": "^0.6.0",
+    "**/xmldom": "github:xmldom/xmldom#0.7.0",
     "typedoc/marked": "^2.1.3",
     "**/node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.14.8",
+    "@babel/core": "^7.15.0",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-private-methods": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
-    "@babel/preset-typescript": "^7.14.5",
-    "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "^1.21.7",
-    "@graphql-codegen/typed-document-node": "^1.18.10",
-    "@graphql-codegen/typescript": "^1.23.0",
-    "@graphql-codegen/typescript-operations": "^1.18.4",
+    "@babel/preset-typescript": "^7.15.0",
+    "@graphql-codegen/add": "^3.0.0",
+    "@graphql-codegen/cli": "^2.0.1",
+    "@graphql-codegen/typed-document-node": "^2.0.0",
+    "@graphql-codegen/typescript": "^2.0.0",
+    "@graphql-codegen/typescript-operations": "^2.0.1",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/netinfo": "^5.9.10",
@@ -72,12 +72,12 @@
     "@sudoplatform/sudo-common": "^5.2.1",
     "@sudoplatform/sudo-user": "^9.0.0",
     "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.171",
+    "@types/lodash": "^4.14.172",
     "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
