--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "yarn codegen && yarn verify && yarn build:transpile && yarn build:declarations && yarn build:docs",
     "build:transpile": "babel src --out-dir lib --extensions '.ts'",
     "build:declarations": "tsc --emitDeclarationOnly",
-    "build:docs": "typedoc --mode file --excludePrivate --out docs src/index.ts"
+    "build:docs": "typedoc --treatWarningsAsErrors --excludePrivate --out docs src/index.ts"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -35,62 +35,60 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "4.0.3",
-    "fp-ts": "^2.11.1",
-    "graphql": "^15.5.1",
+    "fp-ts": "^2.11.4",
+    "graphql": "^15.6.1",
     "io-ts": "^2.2.16",
-    "monocle-ts": "^2.3.10",
+    "monocle-ts": "^2.3.11",
     "newtype-ts": "^0.3.4",
     "redux": "^4.1.1"
   },
   "resolutions": {
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "@graphql-codegen/**/url-loader/ws": "^7.5.3",
+    "@graphql-codegen/**/url-loader/ws": "^7.5.5",
     "@graphql-codegen/**/normalize-url": "^4.5.1",
     "**/glob-parent": "^5.1.2",
-    "**/react-devtools-core/ws": "^7.5.3",
+    "**/react-devtools-core/ws": "^7.5.5",
     "**/xmldom": "github:xmldom/xmldom#0.7.0",
-    "typedoc/marked": "^2.1.3",
-    "**/node-fetch": "^2.6.1"
+    "**/node-fetch": "^2.6.5",
+    "path-parse": "^1.0.7",
+    "@graphql-codegen/cli/**/ansi-regex": "^5.0.1",
+    "jest/**/tmpl": "^1.0.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-private-methods": "^7.14.5",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
-    "@graphql-codegen/add": "^3.0.0",
-    "@graphql-codegen/cli": "^2.0.1",
-    "@graphql-codegen/typed-document-node": "^2.0.0",
-    "@graphql-codegen/typescript": "^2.0.0",
-    "@graphql-codegen/typescript-operations": "^2.0.1",
+    "@graphql-codegen/add": "^3.1.0",
+    "@graphql-codegen/cli": "^2.2.1",
+    "@graphql-codegen/typed-document-node": "^2.1.5",
+    "@graphql-codegen/typescript": "^2.2.3",
+    "@graphql-codegen/typescript-operations": "^2.1.7",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
-    "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-community/netinfo": "^5.9.10",
-    "@sudoplatform/sudo-api-client": "^8.0.6",
-    "@sudoplatform/sudo-common": "^5.3.0",
-    "@sudoplatform/sudo-user": "^9.0.0",
-    "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.172",
+    "@sudoplatform/sudo-api-client": "^8.2.0",
+    "@sudoplatform/sudo-common": "^5.9.0",
+    "@sudoplatform/sudo-user": "^9.1.0",
+    "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.175",
     "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^7.32.0",
+    "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "isomorphic-webcrypto": "^2.3.8",
-    "jest": "^27.0.6",
+    "jest": "^27.2.5",
     "lodash": "^4.17.21",
-    "prettier": "^2.3.2",
-    "react": "16.13.1",
-    "react-native": "^0.63.4",
-    "ts-jest": "^27.0.4",
+    "prettier": "^2.4.1",
+    "ts-jest": "^27.0.5",
     "ts-mockito": "^2.6.1",
-    "typedoc": "0.19.2",
-    "typescript": "^4.3.5",
+    "typedoc": "0.22.5",
+    "typescript": "^4.4.4",
     "uuid": "^8.3.2",
     "wait-for-expect": "^3.0.2"
   }
