--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:eslint": "eslint \"{bin,test,src}/**/*.{js,ts,tsx}\"",
     "lint:prettier": "prettier -l \"{bin,test,src}/**/*.{js,json,jsx,ts,tsx}\"",
     "codegen": "graphql-codegen -c codegen.yml",
-    "verify": "yarn audit && yarn lint && yarn unit-test",
+    "verify": "yarn audit-with-suppressions && yarn lint && yarn unit-test",
     "unit-test": "jest --coverage test/unit",
     "integration-test": "jest test/integration",
     "clean": "rm -rf lib docs",
@@ -35,62 +35,77 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "4.0.3",
-    "fp-ts": "^2.11.5",
-    "graphql": "^15.6.1",
+    "fp-ts": "^2.11.8",
+    "graphql": "^15.8.0",
     "io-ts": "^2.2.16",
-    "monocle-ts": "^2.3.11",
-    "newtype-ts": "^0.3.4",
+    "monocle-ts": "^2.3.12",
+    "newtype-ts": "^0.3.5",
     "redux": "^4.1.2"
   },
   "resolutions": {
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "@graphql-codegen/**/url-loader/ws": "^7.5.5",
+    "@graphql-codegen/**/url-loader/ws": "^7.5.6",
     "@graphql-codegen/**/normalize-url": "^4.5.1",
     "**/glob-parent": "^5.1.2",
-    "**/react-devtools-core/ws": "^7.5.5",
+    "**/react-devtools-core/ws": "^7.5.6",
     "**/xmldom": "github:xmldom/xmldom#0.7.0",
-    "**/node-fetch": "^2.6.5",
+    "**/node-fetch": "^2.6.7",
     "path-parse": "^1.0.7",
     "@graphql-codegen/cli/**/ansi-regex": "^5.0.1",
     "jest/**/tmpl": "^1.0.5",
-    "aws-sdk": "^2.814.0"
+    "aws-sdk": "^2.1062.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-proposal-private-methods": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
-    "@graphql-codegen/add": "^3.1.0",
-    "@graphql-codegen/cli": "^2.2.1",
-    "@graphql-codegen/typed-document-node": "^2.1.6",
-    "@graphql-codegen/typescript": "^2.2.4",
-    "@graphql-codegen/typescript-operations": "^2.1.8",
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-private-methods": "^7.16.11",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@graphql-codegen/add": "^3.1.1",
+    "@graphql-codegen/cli": "^2.4.0",
+    "@graphql-codegen/typed-document-node": "^2.2.2",
+    "@graphql-codegen/typescript": "^2.4.2",
+    "@graphql-codegen/typescript-operations": "^2.2.2",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@sudoplatform/sudo-api-client": "^9.0.1",
-    "@sudoplatform/sudo-common": "^6.0.0",
-    "@sudoplatform/sudo-user": "^10.0.0",
-    "@types/jest": "^27.0.2",
-    "@types/lodash": "^4.14.177",
-    "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@sudoplatform/sudo-common": "^6.1.0",
+    "@sudoplatform/sudo-entitlements-admin": "^9.0.0",
+    "@sudoplatform/sudo-user": "^10.0.1",
+    "@types/jest": "^27.4.0",
+    "@types/lodash": "^4.14.178",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^8.1.0",
+    "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "isomorphic-webcrypto": "^2.3.8",
-    "jest": "^27.3.1",
+    "jest": "^27.4.7",
     "lodash": "^4.17.21",
-    "prettier": "^2.4.1",
-    "ts-jest": "^27.0.7",
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
     "ts-mockito": "^2.6.1",
-    "typedoc": "^0.22.9",
-    "typescript": "^4.4.4",
+    "typedoc": "^0.22.11",
+    "typescript": "^4.5.5",
     "uuid": "^8.3.2",
     "wait-for-expect": "^3.0.2"
+  },
+  "outdatedSuppressions": {
+    "major": {
+      "ansi-regex": 1643071823,
+      "glob-parent": 1643071896,
+      "normalize-url": 1643071935,
+      "xmldom": 1643071968,
+      "graphql": 1643072071,
+      "node-fetch": 1643072093,
+      "ws": 1643072106
+    },
+    "minor": {
+      "aws-appsync": 1643071856
+    }
   }
 }
