--- a/package.json
+++ b/package.json
@@ -45,52 +45,53 @@
   "resolutions": {
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "@graphql-codegen/**/url-loader/ws": "^7.5.6",
+    "@graphql-codegen/**/url-loader/ws": "^7.5.7",
     "@graphql-codegen/**/normalize-url": "^4.5.1",
     "**/glob-parent": "^5.1.2",
-    "**/react-devtools-core/ws": "^7.5.6",
+    "**/react-devtools-core/ws": "^7.5.7",
     "**/xmldom": "github:xmldom/xmldom#0.7.0",
     "**/node-fetch": "^2.6.7",
     "path-parse": "^1.0.7",
     "@graphql-codegen/cli/**/ansi-regex": "^5.0.1",
     "jest/**/tmpl": "^1.0.5",
-    "aws-sdk": "^2.1062.0"
+    "aws-sdk": "^2.1092.0",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.8",
-    "@babel/core": "^7.16.12",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-private-methods": "^7.16.11",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@graphql-codegen/add": "^3.1.1",
-    "@graphql-codegen/cli": "^2.4.0",
-    "@graphql-codegen/typed-document-node": "^2.2.2",
-    "@graphql-codegen/typescript": "^2.4.2",
-    "@graphql-codegen/typescript-operations": "^2.2.2",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typed-document-node": "^2.2.7",
+    "@graphql-codegen/typescript": "^2.4.7",
+    "@graphql-codegen/typescript-operations": "^2.3.4",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@sudoplatform/sudo-api-client": "^9.0.1",
-    "@sudoplatform/sudo-common": "^6.1.0",
-    "@sudoplatform/sudo-entitlements-admin": "^9.0.0",
+    "@sudoplatform/sudo-common": "^6.2.0",
+    "@sudoplatform/sudo-entitlements-admin": "^9.0.2",
     "@sudoplatform/sudo-user": "^10.0.1",
-    "@types/jest": "^27.4.0",
-    "@types/lodash": "^4.14.178",
+    "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.179",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "isomorphic-webcrypto": "^2.3.8",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "lodash": "^4.17.21",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
     "ts-mockito": "^2.6.1",
-    "typedoc": "^0.22.11",
-    "typescript": "^4.5.5",
+    "typedoc": "^0.22.13",
+    "typescript": "^4.6.2",
     "uuid": "^8.3.2",
     "wait-for-expect": "^3.0.2"
   },
