--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "4.0.3",
-    "fp-ts": "^2.11.8",
+    "fp-ts": "^2.11.9",
     "graphql": "^15.8.0",
     "io-ts": "^2.2.16",
     "monocle-ts": "^2.3.12",
@@ -54,59 +54,60 @@
     "path-parse": "^1.0.7",
     "@graphql-codegen/cli/**/ansi-regex": "^5.0.1",
     "jest/**/tmpl": "^1.0.5",
-    "aws-sdk": "^2.1092.0",
-    "lodash-es": "^4.17.21"
+    "aws-sdk": "^2.1105.0",
+    "lodash-es": "^4.17.21",
+    "minimist": "^1.2.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.8",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-private-methods": "^7.16.11",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@graphql-codegen/add": "^3.1.1",
     "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typed-document-node": "^2.2.7",
-    "@graphql-codegen/typescript": "^2.4.7",
-    "@graphql-codegen/typescript-operations": "^2.3.4",
+    "@graphql-codegen/typed-document-node": "^2.2.8",
+    "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-operations": "^2.3.5",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@sudoplatform/sudo-api-client": "^9.0.1",
     "@sudoplatform/sudo-common": "^6.2.0",
-    "@sudoplatform/sudo-entitlements-admin": "^9.0.2",
+    "@sudoplatform/sudo-entitlements-admin": "^9.0.4",
     "@sudoplatform/sudo-user": "^10.0.1",
     "@types/jest": "^27.4.1",
-    "@types/lodash": "^4.14.179",
+    "@types/lodash": "^4.14.181",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "isomorphic-webcrypto": "^2.3.8",
     "jest": "^27.5.1",
     "lodash": "^4.17.21",
-    "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3",
+    "prettier": "^2.6.1",
+    "ts-jest": "^27.1.4",
     "ts-mockito": "^2.6.1",
     "typedoc": "^0.22.13",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.3",
     "uuid": "^8.3.2",
     "wait-for-expect": "^3.0.2"
   },
   "outdatedSuppressions": {
     "major": {
-      "ansi-regex": 1643071823,
-      "glob-parent": 1643071896,
-      "normalize-url": 1643071935,
-      "xmldom": 1643071968,
-      "graphql": 1643072071,
-      "node-fetch": 1643072093,
-      "ws": 1643072106
+      "ansi-regex": 1649985405,
+      "glob-parent": 1649985425,
+      "normalize-url": 1649985452,
+      "xmldom": 1649985444,
+      "graphql": 1649985430,
+      "node-fetch": 1649985435,
+      "ws": 1649985438
     },
     "minor": {
-      "aws-appsync": 1643071856
+      "aws-appsync": 1649985416
     }
   }
 }
