--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "Apache-2.0",
   "scripts": {
+    "prepare": "husky install",
     "lint": "yarn lint:eslint && yarn lint:prettier",
     "lint:eslint": "eslint \"{bin,test,src}/**/*.{js,ts,tsx}\"",
     "lint:prettier": "prettier -l \"{bin,test,src}/**/*.{js,json,jsx,ts,tsx}\"",
@@ -54,42 +55,44 @@
     "path-parse": "^1.0.7",
     "@graphql-codegen/cli/**/ansi-regex": "^5.0.1",
     "jest/**/tmpl": "^1.0.5",
-    "aws-sdk": "^2.1105.0",
+    "aws-sdk": "^2.1140.0",
     "lodash-es": "^4.17.21",
-    "minimist": "^1.2.6"
+    "minimist": "^1.2.6",
+    "dset": "^3.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.8",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-private-methods": "^7.16.11",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/core": "^7.18.0",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/plugin-proposal-private-methods": "^7.17.12",
+    "@babel/preset-env": "^7.18.0",
+    "@babel/preset-typescript": "^7.17.12",
     "@graphql-codegen/add": "^3.1.1",
     "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typed-document-node": "^2.2.8",
-    "@graphql-codegen/typescript": "^2.4.8",
-    "@graphql-codegen/typescript-operations": "^2.3.5",
+    "@graphql-codegen/typed-document-node": "^2.2.11",
+    "@graphql-codegen/typescript": "^2.4.11",
+    "@graphql-codegen/typescript-operations": "^2.4.0",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@sudoplatform/sudo-api-client": "^9.0.1",
-    "@sudoplatform/sudo-common": "^6.2.0",
-    "@sudoplatform/sudo-entitlements-admin": "^9.0.4",
+    "@sudoplatform/sudo-common": "^6.2.1",
+    "@sudoplatform/sudo-entitlements-admin": "^9.1.0",
     "@sudoplatform/sudo-user": "^10.0.1",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^27.5.1",
     "@types/lodash": "^4.14.181",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "apollo-client": "^2.6.10",
-    "eslint": "^8.12.0",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.1",
     "isomorphic-webcrypto": "^2.3.8",
     "jest": "^27.5.1",
     "lodash": "^4.17.21",
     "prettier": "^2.6.1",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^27.1.5",
     "ts-mockito": "^2.6.1",
     "typedoc": "^0.22.13",
     "typescript": "^4.6.3",
