--- a/package.json
+++ b/package.json
@@ -29,19 +29,19 @@
     "docs"
   ],
   "peerDependencies": {
-    "@sudoplatform/sudo-api-client": "^9.0.1",
+    "@sudoplatform/sudo-api-client": "^10.0.0",
     "@sudoplatform/sudo-common": "^6.0.0",
     "@sudoplatform/sudo-user": "^10.0.0"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
-    "aws-appsync": "4.0.3",
-    "fp-ts": "^2.11.9",
+    "aws-appsync": "^4.1.6",
+    "fp-ts": "^2.12.1",
     "graphql": "^15.8.0",
     "io-ts": "^2.2.16",
-    "monocle-ts": "^2.3.12",
+    "monocle-ts": "^2.3.13",
     "newtype-ts": "^0.3.5",
-    "redux": "^4.1.2"
+    "redux": "^4.2.0"
   },
   "resolutions": {
     "**/apollo-link": "^1.2.14",
@@ -65,7 +65,7 @@
     "@babel/core": "^7.18.0",
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/plugin-proposal-private-methods": "^7.17.12",
-    "@babel/preset-env": "^7.18.0",
+    "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
     "@graphql-codegen/add": "^3.1.1",
     "@graphql-codegen/cli": "^2.6.2",
@@ -73,22 +73,21 @@
     "@graphql-codegen/typescript": "^2.4.11",
     "@graphql-codegen/typescript-operations": "^2.4.0",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
-    "@sudoplatform/sudo-api-client": "^9.0.1",
+    "@sudoplatform/sudo-api-client": "^10.0.0",
     "@sudoplatform/sudo-common": "^6.2.1",
-    "@sudoplatform/sudo-entitlements-admin": "^9.1.0",
-    "@sudoplatform/sudo-user": "^10.0.1",
+    "@sudoplatform/sudo-entitlements-admin": "^9.1.1",
+    "@sudoplatform/sudo-user": "^10.1.1",
     "@types/jest": "^27.5.1",
-    "@types/lodash": "^4.14.181",
+    "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "apollo-client": "^2.6.10",
-    "eslint": "^8.16.0",
+    "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.1",
-    "isomorphic-webcrypto": "^2.3.8",
     "jest": "^27.5.1",
     "lodash": "^4.17.21",
     "prettier": "^2.6.1",
