--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
-    "aws-appsync": "^4.1.6",
+    "aws-appsync": "^4.1.7",
     "fp-ts": "^2.12.1",
     "graphql": "^15.8.0",
     "io-ts": "^2.2.16",
@@ -46,55 +46,57 @@
   "resolutions": {
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "@graphql-codegen/**/url-loader/ws": "^7.5.7",
+    "@graphql-codegen/**/url-loader/ws": "^7.5.9",
     "@graphql-codegen/**/normalize-url": "^4.5.1",
-    "**/glob-parent": "^5.1.2",
-    "**/react-devtools-core/ws": "^7.5.7",
+    "**/glob-parent": "^6.0.1",
+    "**/react-devtools-core/ws": "^7.5.9",
     "**/xmldom": "github:xmldom/xmldom#0.7.0",
     "**/node-fetch": "^2.6.7",
     "path-parse": "^1.0.7",
     "@graphql-codegen/cli/**/ansi-regex": "^5.0.1",
     "jest/**/tmpl": "^1.0.5",
-    "aws-sdk": "^2.1140.0",
+    "aws-sdk": "^2.1181.0",
     "lodash-es": "^4.17.21",
     "minimist": "^1.2.6",
-    "dset": "^3.1.2"
+    "dset": "^3.1.2",
+    "undici": "^5.8.0",
+    "got": "^11.8.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.18.0",
-    "@babel/plugin-proposal-class-properties": "^7.17.12",
-    "@babel/plugin-proposal-private-methods": "^7.17.12",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-typescript": "^7.17.12",
-    "@graphql-codegen/add": "^3.1.1",
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typed-document-node": "^2.2.11",
-    "@graphql-codegen/typescript": "^2.4.11",
-    "@graphql-codegen/typescript-operations": "^2.4.0",
+    "@babel/cli": "^7.18.9",
+    "@babel/core": "^7.18.9",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-typescript": "^7.18.6",
+    "@graphql-codegen/add": "^3.2.0",
+    "@graphql-codegen/cli": "^2.9.1",
+    "@graphql-codegen/typed-document-node": "^2.3.2",
+    "@graphql-codegen/typescript": "^2.7.2",
+    "@graphql-codegen/typescript-operations": "^2.5.2",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
-    "@sudoplatform/sudo-api-client": "^10.0.0",
-    "@sudoplatform/sudo-common": "^6.2.1",
-    "@sudoplatform/sudo-entitlements-admin": "^9.1.1",
-    "@sudoplatform/sudo-user": "^10.1.1",
-    "@types/jest": "^27.5.1",
+    "@sudoplatform/sudo-api-client": "^11.0.0",
+    "@sudoplatform/sudo-common": "^7.0.2",
+    "@sudoplatform/sudo-entitlements-admin": "^10.0.0",
+    "@sudoplatform/sudo-user": "^11.0.0",
+    "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "apollo-client": "^2.6.10",
-    "eslint": "^8.17.0",
+    "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "jest": "^27.5.1",
     "lodash": "^4.17.21",
-    "prettier": "^2.6.1",
+    "prettier": "^2.7.1",
     "ts-jest": "^27.1.5",
     "ts-mockito": "^2.6.1",
-    "typedoc": "^0.22.13",
-    "typescript": "^4.6.3",
+    "typedoc": "^0.23.9",
+    "typescript": "^4.7.4",
     "uuid": "^8.3.2",
     "wait-for-expect": "^3.0.2"
   },
@@ -107,9 +109,6 @@
       "graphql": 1649985430,
       "node-fetch": 1649985435,
       "ws": 1649985438
-    },
-    "minor": {
-      "aws-appsync": 1649985416
     }
   }
 }
