--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "unit-test": "jest --coverage test/unit",
     "integration-test": "jest test/integration",
     "clean": "rm -rf esm lib docs",
-    "build": "yarn codegen && yarn verify && yarn build:transpile && yarn build:docs",
+    "build": "yarn codegen && yarn build:transpile && yarn build:docs",
     "build:transpile": "concurrently \"yarn build:transpile:declarations\" \"yarn build:transpile:cjs\" \"yarn build:transpile:esm\"",
     "build:transpile:cjs": "tsc --project tsconfig.commonjs.json",
     "build:transpile:esm": "tsc",
@@ -41,71 +41,70 @@
     "types"
   ],
   "peerDependencies": {
-    "@sudoplatform/sudo-api-client": "^12.0.1",
-    "@sudoplatform/sudo-common": "^8.0.1",
-    "@sudoplatform/sudo-user": "^12.0.2"
+    "@sudoplatform/sudo-api-client": "^12.2.1",
+    "@sudoplatform/sudo-common": "^8.3.0",
+    "@sudoplatform/sudo-user": "^12.2.3"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
-    "aws-appsync": "^4.1.7",
-    "fp-ts": "^2.12.1",
+    "aws-appsync": "^4.1.9",
+    "fp-ts": "^2.13.1",
     "graphql": "^15.8.0",
-    "io-ts": "^2.2.17",
+    "io-ts": "^2.2.20",
     "monocle-ts": "^2.3.13",
     "newtype-ts": "^0.3.5",
     "redux": "^4.2.0",
-    "tslib": "^2.4.0"
+    "tslib": "^2.4.1"
   },
   "resolutions": {
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "minimist": "^1.2.6",
     "node-fetch": "^2.6.7",
-    "undici": "^5.9.1",
-    "got": "^11.8.5"
+    "json5": "^2.2.2",
+    "aws-appsync": "^4.1.9"
   },
   "devDependencies": {
-    "@graphql-codegen/add": "^3.2.0",
-    "@graphql-codegen/cli": "^2.9.1",
-    "@graphql-codegen/typed-document-node": "^2.3.2",
-    "@graphql-codegen/typescript": "^2.7.2",
-    "@graphql-codegen/typescript-operations": "^2.5.2",
+    "@graphql-codegen/add": "^3.2.3",
+    "@graphql-codegen/cli": "^2.16.4",
+    "@graphql-codegen/typed-document-node": "^2.3.12",
+    "@graphql-codegen/typescript": "^2.8.7",
+    "@graphql-codegen/typescript-operations": "^2.5.12",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
-    "@sudoplatform/sudo-api-client": "^12.0.1",
-    "@sudoplatform/sudo-common": "^8.0.1",
-    "@sudoplatform/sudo-entitlements-admin": "^11.0.2",
-    "@sudoplatform/sudo-user": "^12.0.2",
+    "@sudoplatform/sudo-api-client": "^12.2.1",
+    "@sudoplatform/sudo-common": "^8.3.0",
+    "@sudoplatform/sudo-entitlements-admin": "^11.1.0",
+    "@sudoplatform/sudo-user": "^12.2.3",
     "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.14.184",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
+    "@types/lodash": "^4.14.191",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "apollo-client": "^2.6.10",
-    "concurrently": "^7.3.0",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "concurrently": "^7.6.0",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-tree-shaking": "^1.10.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.3",
     "jest": "^27.5.1",
     "lodash": "^4.17.21",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.3",
     "ts-jest": "^27.1.5",
     "ts-mockito": "^2.6.1",
-    "typedoc": "^0.23.9",
-    "typescript": "^4.7.4",
-    "uuid": "^8.3.2",
+    "ts-node": "^10.9.1",
+    "typedoc": "^0.23.24",
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
     "wait-for-expect": "^3.0.2"
   },
   "outdatedSuppressions": {
     "major": {
-      "ansi-regex": 1649985405,
-      "glob-parent": 1649985425,
-      "normalize-url": 1649985452,
-      "graphql": 1649985430,
-      "node-fetch": 1649985435,
-      "ws": 1649985438
+      "graphql": 1676161723,
+      "node-fetch": 1676161723,
+      "jest": 1676161723,
+      "ts-jest": 1676161723,
+      "@types/jest": 1676161723
     }
   }
 }
