--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
   "cSpell.words": [
+    "Anonyome",
     "dset",
+    "sudoplatform",
     "sudoplatformconfig"
   ]
 }
