--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "lint": "yarn lint:eslint && yarn lint:prettier",
     "lint:eslint": "eslint \"{bin,test,src}/**/*.{js,ts,tsx}\"",
     "lint:prettier": "prettier -l \"{bin,test,src}/**/*.{js,json,jsx,ts,tsx}\"",
@@ -41,69 +41,72 @@
     "types"
   ],
   "peerDependencies": {
-    "@sudoplatform/sudo-api-client": "^14.0.0",
-    "@sudoplatform/sudo-common": "^8.3.1",
-    "@sudoplatform/sudo-user": "^13.0.0"
+    "@sudoplatform/sudo-api-client": "^15.0.0",
+    "@sudoplatform/sudo-common": "^10.0.2",
+    "@sudoplatform/sudo-user": "^15.1.1"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "^4.1.10",
-    "fp-ts": "^2.16.8",
+    "fp-ts": "^2.16.9",
     "graphql": "^15.9.0",
-    "io-ts": "^2.2.21",
+    "io-ts": "^2.2.22",
     "monocle-ts": "^2.3.13",
     "newtype-ts": "^0.3.5",
-    "tslib": "^2.6.3"
+    "tslib": "^2.8.1"
   },
   "resolutions": {
-    "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "node-fetch": "^2.7.0"
+    "**/micromatch": "^4.0.8",
+    "**/dset": "^3.1.4",
+    "**/cross-spawn": "^7.0.6"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^5.0.3",
-    "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-codegen/typed-document-node": "^5.0.9",
-    "@graphql-codegen/typescript": "^4.0.9",
-    "@graphql-codegen/typescript-operations": "^4.2.3",
+    "@graphql-codegen/cli": "^5.0.3",
+    "@graphql-codegen/typed-document-node": "^5.0.12",
+    "@graphql-codegen/typescript": "^4.1.2",
+    "@graphql-codegen/typescript-operations": "^4.4.0",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
-    "@sudoplatform/sudo-api-client": "^14.0.1",
-    "@sudoplatform/sudo-common": "^8.9.1",
-    "@sudoplatform/sudo-entitlements-admin": "^11.2.2",
-    "@sudoplatform/sudo-user": "^13.1.0",
-    "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.17.7",
+    "@sudoplatform/sudo-api-client": "^15.0.0",
+    "@sudoplatform/sudo-common": "^10.0.2",
+    "@sudoplatform/sudo-entitlements-admin": "^12.0.0",
+    "@sudoplatform/sudo-user": "^15.1.1",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^20.17.9",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "apollo-client": "^2.6.10",
-    "concurrently": "^8.2.2",
-    "eslint": "^8.57.0",
+    "concurrently": "^9.1.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-tree-shaking": "^1.12.2",
-    "husky": "^8.0.3",
+    "husky": "^9.1.7",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
-    "node-fetch": "^2.7.0",
-    "prettier": "^3.3.3",
-    "ts-jest": "^27.1.5",
+    "node-fetch": "^3.3.2",
+    "prettier": "^3.4.2",
+    "ts-jest": "^29.2.5",
     "ts-mockito": "^2.6.1",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.25.13",
-    "typescript": "~5.4.x",
-    "uuid": "^10.0.0",
+    "typedoc": "^0.27.5",
+    "typescript": "~5.7.x",
+    "uuid": "^11.0.3",
     "wait-for-expect": "^3.0.2"
   },
   "outdatedSuppressions": {
     "major": {
-      "@types/jest": 1688699011,
-      "graphql": 1688699011,
-      "jest": 1688699011,
-      "node-fetch": 1688699011,
-      "ts-jest": 1688699012
+      "graphql": 1736991458,
+      "@types/node": 1736991434,
+      "eslint": 1736991474
     }
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
